--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.8.0",
     "express": "^4.16.4",
-    "sqlite3": "^4.0.6"
+    "papaparse": "^4.6.3",
+    "sqlite3": "^4.0.6",
+    "vue-chartjs": "^3.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
